--- a/app/src/main/res/layout/activity_videodetails.xml
+++ b/app/src/main/res/layout/activity_videodetails.xml
@@ -46,7 +46,7 @@
             android:id="@+id/vd_title_extraicon"
             android:layout_width="12dp"
             android:layout_height="19dp"
-            android:layout_toLeftOf="@+id/vd_title_title"
+            android:layout_toStartOf="@+id/vd_title_title"
             android:rotation="90"
             android:src="@drawable/icon_extra" />
 
@@ -54,7 +54,7 @@
             android:id="@+id/vd_title_extraicon2"
             android:layout_width="12dp"
             android:layout_height="19dp"
-            android:layout_toRightOf="@+id/vd_title_title"
+            android:layout_toEndOf="@+id/vd_title_title"
             android:rotation="270"
             android:src="@drawable/icon_extra" />
     </RelativeLayout>
@@ -63,7 +63,8 @@
         android:id="@+id/vd_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/vd_title_layout" />
+        android:layout_below="@+id/vd_title_layout"
+        android:orientation="horizontal"/>
 
     <LinearLayout
         android:id="@+id/vd_loading"
@@ -136,7 +137,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="视频不见了. . .\n可能是没有登录？"
+            android:text="  视频不见了..."
             android:textSize="13sp" />
 
     </LinearLayout>
