--- a/app/src/main/res/layout/viewpager_img_img.xml
+++ b/app/src/main/res/layout/viewpager_img_img.xml
@@ -9,5 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:saveEnabled="true"
-        android:src="@drawable/img_default_imgviewpaper" />
+        android:src="@drawable/img_default_imgviewpaper"
+        android:clickable="true"
+        android:focusable="true"/>
 </LinearLayout>
