--- a/app/src/main/res/layout/item_list_video.xml
+++ b/app/src/main/res/layout/item_list_video.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_list_video_lay"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
     android:paddingBottom="1dp"
-    android:paddingLeft="19dp"
-    android:paddingRight="19dp"
+    android:paddingLeft="18dp"
+    android:paddingRight="18dp"
     android:paddingTop="1dp">
 
     <ImageView
-        android:id="@+id/vid_img"
+        android:id="@+id/item_list_video_img"
         android:layout_width="68dp"
         android:layout_height="44dp"
         android:layout_centerVertical="true"
@@ -20,11 +19,11 @@
         android:src="@drawable/img_default_vid" />
 
     <ProgressBar
-        android:id="@+id/vid_pro"
+        android:id="@+id/item_list_video_pro"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="68dp"
         android:layout_height="3dp"
-        android:layout_alignBottom="@+id/vid_img"
+        android:layout_alignBottom="@+id/item_list_video_img"
         android:layout_marginBottom="-2dp"
         android:progressDrawable="@drawable/layer_wl_progress"
         android:visibility="gone" />
@@ -33,21 +32,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="4dp"
-        android:layout_toRightOf="@+id/vid_img"
+        android:layout_marginStart="2dp"
+        android:layout_toEndOf="@+id/item_list_video_img"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/vid_title"
+            android:id="@+id/item_list_video_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="@color/gray_44"
-            android:textSize="13sp" />
+            android:textSize="12sp" />
 
         <TextView
-            android:id="@+id/vid_up"
+            android:id="@+id/item_list_video_up"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="10sp" />
@@ -58,7 +57,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/vid_play"
+                android:id="@+id/item_list_video_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -66,10 +65,10 @@
                 android:textSize="10sp" />
 
             <TextView
-                android:id="@+id/vid_danmaku"
+                android:id="@+id/item_list_video_danmaku"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
+                android:layout_marginStart="4dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textSize="10sp" />
@@ -78,7 +77,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/vid_novidlayout"
+        android:id="@+id/item_list_video_novidlayout"
         android:layout_width="match_parent"
         android:layout_height="68dp"
         android:background="#AA000000"
@@ -89,7 +88,7 @@
         android:visibility="gone">
 
         <ImageView
-            android:id="@+id/vid_novid"
+            android:id="@+id/item_list_video_novid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -97,8 +96,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:paddingLeft="10dp"
-            android:paddingRight="20dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="20dp"
             android:text="视频已失效"
             android:textColor="#fff"
             android:textSize="18sp" />
