--- a/app/src/main/res/layout/fragment_download.xml
+++ b/app/src/main/res/layout/fragment_download.xml
@@ -73,6 +73,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="92dp"
+            android:padding="6dp"
             android:src="@drawable/img_loading_1" />
 
         <TextView
