--- a/app/src/main/res/drawable/shape_anre_followbg.xml
+++ b/app/src/main/res/drawable/shape_anre_followbg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#fa7298" />
+    <solid android:color="@color/mainColor" />
     <corners android:radius="2dp" />
 </shape>
