--- a/app/src/main/res/layout/item_favor_box.xml
+++ b/app/src/main/res/layout/item_favor_box.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/favor_lay"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingBottom="2dp"
@@ -20,7 +20,7 @@
     <LinearLayout
         android:layout_width="26dp"
         android:layout_height="44dp"
-        android:layout_alignRight="@+id/favor_img"
+        android:layout_alignEnd="@+id/favor_img"
         android:layout_marginTop="4dp"
         android:background="#88000000"
         android:gravity="center"
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/favor_img"
+        android:layout_toEndOf="@+id/favor_img"
         android:orientation="vertical"
         android:paddingTop="4dp">
 
