--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="mainColor">#fa7298</color>
 
     <color name="white">#ffffff</color>
+    <color name="gray_ee">#EEEEEE</color>
     <color name="gray_da">#DADADA</color>
     <color name="gray_d8">#D8D8D8</color>
     <color name="gray_bb">#BBBBBB</color>
