--- a/app/src/main/res/drawable/shape_bg_dynamic_article_card.xml
+++ b/app/src/main/res/drawable/shape_bg_dynamic_article_card.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#55000000" />
-    <corners android:radius="2dp" />
+    <stroke
+        android:width="0.5dp"
+        android:color="#25000000"/>
+    <corners
+        android:radius="3dp" />
 </shape>
