--- a/app/src/main/res/layout/item_reply_reply.xml
+++ b/app/src/main/res/layout/item_reply_reply.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
+    android:focusable="true"
     android:descendantFocusability="blocksDescendants"
     android:paddingLeft="20dp"
     android:paddingTop="2dp"
@@ -21,6 +21,7 @@
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="2dp"
         android:clickable="true"
+        android:focusable="true"
         android:src="@drawable/img_default_head" />
 
     <LinearLayout
@@ -188,6 +189,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:clickable="true"
+            android:focusable="true"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -213,6 +215,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
+            android:focusable="true"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
